# notifications-api

./: .cfignore  .coveragerc  .ds.baseline  .env.deploy.sample  .gitignore  .pre-commit-config.yaml  .profile  .secrets.baseline  CONTRIBUTING.md  LICENSE.md  Makefile  Pipfile  Procfile  Procfile.dev  README.md  application.py  docker-compose.devcontainer.yml  dockerfile_alpine.txt  dockerfile_alpine_cryptowheel.txt  dockerfile_ubuntu_cryptowheel_works.txt  dockerfile_ubuntu_python_doesnt_work.txt  dump.rdb  fips.sh  gunicorn_config.py  gunicorn_entry.py  loadtest_10k.csv  manifest.yml  manifest.yml.j2  newrelic.ini  package-lock.json  pyproject.toml  pytest.ini  render.yaml  requirements-app.txt  requirements.in  requirements.txt  requirements_for_test.txt  run.py  run_celery.py  sample.env  (+3 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: create-a-new-adr-draft.md  create-a-new-adr-from-template.md  create-a-new-adr.md  create-new-adr-form.yml
.github/workflows/: adr-accepted.yml  checks.yml  codeql.yml  daily_checks.yml  dependabot-auto-merge.yml  deploy-demo.yml  deploy-prod.yml  deploy.yml  drift.yml  restage-apps.yml  terraform-demo.yml  terraform-staging.yml
app/: __init__.py  cloudfoundry_config.py  commands.py  config.py  cronitor.py  enums.py  errors.py  exceptions.py  history_meta.py  json_models.py  models.py  render_config.py  schemas.py  serialised_models.py  socket_handlers.py  utils.py  variables.py
app/authentication/: auth.py
app/aws/: s3.py
app/billing/: billing_schemas.py  rest.py
app/broadcast_message/: utils.py
app/celery/: letters_pdf_tasks.py  nightly_tasks.py  process_ses_receipts_tasks.py  process_sms_client_response_tasks.py  provider_tasks.py  reporting_tasks.py  research_mode_tasks.py  scheduled_tasks.py  service_callback_tasks.py  tasks.py  test_key_tasks.py  validate_sns.py  validate_sns_cert.py  validate_sns_message.py
app/clients/: __init__.py  cbc_proxy.py  document_download.py
app/complaint/: complaint_rest.py
app/config_files/: templates.json
app/dao/: __init__.py  annual_billing_dao.py  api_key_dao.py  broadcast_service_dao.py  complaint_dao.py  dao_utils.py  date_util.py  email_branding_dao.py  fact_billing_dao.py  fact_notification_status_dao.py  fact_processing_time_dao.py  inbound_numbers_dao.py  inbound_sms_dao.py  invited_org_user_dao.py  invited_user_dao.py  jobs_dao.py  notifications_dao.py  organisation_dao.py  organization_dao.py  pagination.py  permissions_dao.py  provider_details_dao.py  returned_letters_dao.py  service_callback_api_dao.py  service_data_retention_dao.py  service_email_reply_to_dao.py  service_guest_list_dao.py  service_inbound_api_dao.py  service_permissions_dao.py  service_sms_sender_dao.py  service_user_dao.py  services_dao.py  template_folder_dao.py  templates_dao.py  uploads_dao.py  users_dao.py  webauthn_credential_dao.py
app/delivery/: send_to_providers.py
app/docs/: __init__.py
app/email_branding/: email_branding_schema.py  rest.py
app/events/: rest.py
app/inbound_number/: rest.py
app/inbound_sms/: rest.py
app/job/: rest.py
app/letters/: rest.py  utils.py
app/notifications/: callbacks.py  notifications_letter_callback.py  notifications_ses_callback.py  notifications_sms_callback.py  process_letter_notifications.py  process_notifications.py  receive_notifications.py  rest.py  sns_cert_validator.py  sns_handlers.py  utils.py  validators.py
app/organisation/: organisation_schema.py  rest.py
app/organization/: invite_rest.py  organization_schema.py  rest.py
app/performance_dashboard/: rest.py
app/performance_platform/: processing_time.py  total_sent_notifications.py
app/platform_stats/: rest.py
app/provider_details/: rest.py
app/public_schemas/: public.py
app/schema_validation/: __init__.py
app/service/: callback_rest.py  rest.py  send_notification.py  sender.py  service_callback_api_schema.py  service_data_retention_schema.py  service_senders_schema.py  statistics.py  utils.py
app/service_invite/: rest.py
app/socketio_server/: test_socketio.py
app/status/: healthcheck.py
app/template/: rest.py  template_schemas.py
app/template_folder/: rest.py  template_folder_schema.py
app/template_statistics/: rest.py
app/upload/: rest.py
app/user/: rest.py
app/v2/: errors.py  utils.py
app/webauthn/: rest.py
app/xml_schemas/: __init__.py
database_maintenance/: README.md  constraints.sql  create_temp_notification_history.sql  cycle_notification_history.sql  cycle_notification_history_in_batches.sql  foreign_keys.sql  script_1.sql
deploy-config/: demo.yml  production.yml  sandbox.yml  staging.yml
deploy-config/egress_proxy/: notify-api-demo.allow.acl  notify-api-demo.deploy.acl  notify-api-production.allow.acl  notify-api-production.deploy.acl  notify-api-staging.allow.acl  notify-api-staging.deploy.acl
devcontainer-api/: .devcontainer.json  Dockerfile
devcontainer-api/scripts/: notify-dev-entrypoint.sh  notify-worker-entrypoint.sh
devcontainer-worker/: .devcontainer.json
docs/: all.md  api-usage.md  bulk_testing.md  data-dictionary.md  data-storage.md  database-management.md  deploying.md  infra-onboarding.md  infra-overview.md  infra-setup.md  localstack.md  message-sending-path.md  one-off-tasks.md  openapi.yml  queues-and-tasks.md  reflection.md  render-deployment.md  run-book.md  system-description.md  testing.md  writing-public-apis.md
docs/adrs/: 0001-establishing-adrs-for-us-notify.md  0002-how-to-handle-timezones.md  README.md  (+15 more)
logs/: app.log.json
migrations/: alembic.ini  env.py
notifications_python_client/: __init__.py  base.py  errors.py
notifications_utils/: __init__.py  letter_timings.py  logging.py  markdown.py  recipients.py  request_helper.py  s3.py  sanitise_text.py  template.py  timezones.py
scripts/: check_if_new_migration.py  deploy_to_sandbox.sh  fix_migrations.py  migrate_and_run_web.sh  paas_app_wrapper.sh  run_app_paas.sh  run_multi_worker_app_paas.sh
terraform/: README.md
test_csv_files/: multiple_sms.csv  sms.csv
tests/: __init__.py  conftest.py  test_all_queues_used.py
(+588 files in other folders)
