[tool.poetry]
name = "notifications-api"
package-mode = false
version = "0.1.0"
description = "Notify.gov backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12.9"
alembic = "==1.16.4"
amqp = "==5.3.1"
beautifulsoup4 = "==4.13.4"
boto3 = "^1.38.27"
botocore = "^1.38.27"
cachetools = "==6.1.0"
celery = {version = "==5.5.3", extras = ["redis"]}
certifi = ">=2022.12.7"
cffi = "==1.17.1"
charset-normalizer = "^3.4.2"
click = "==8.2.1"
click-datetime = "==0.4.0"
click-didyoumean = "==0.3.1"
click-plugins = "==1.1.1.2"
click-repl = "==0.3.0"
deprecated = "==1.2.18"
eventlet = "==0.40.1"
expiringdict = "==1.2.2"
flask = "~=3.1"
flask-bcrypt = "==1.0.1"
flask-migrate = "==4.1.0"
flask-redis = "==0.4.0"
flask-sqlalchemy = "^3.1.1"
gunicorn = {version = "==23.0.0", extras = ["eventlet"]}
iso8601 = "==2.1.0"
jsonschema = {version = "==4.25.0", extras = ["format"]}
lxml = "==6.0.0"
marshmallow = "^4.0.0"
marshmallow-sqlalchemy = "^1.4.2"
newrelic = "*"
packaging = "==25.0"
poetry-dotenv-plugin = "==0.2.0"
psycopg2-binary = "==2.9.10"
pyjwt = "==2.10.1"
python-dotenv = "==1.1.1"
sqlalchemy = "==2.0.41"
werkzeug = "^3.0.6"
faker = "^37.4.2"
async-timeout = "^5.0.1"
bleach = "^6.1.0"
geojson = "^3.2.0"
numpy = "^2.3.1"
ordered-set = "^4.1.0"
phonenumbers = "^9.0.9"
python-json-logger = "^3.3.0"
regex = "^2024.11.6"
shapely = "^2.1.1"
smartypants = "^2.0.1"
mistune = "^3.1.3"
blinker = "^1.9.0"
cryptography = "^45.0.5"
idna = "^3.7"
jmespath = "^1.0.1"
markupsafe = "^3.0.2"
pycparser = "^2.22"
python-dateutil = "^2.9.0.post0"
pyyaml = "^6.0.2"
s3transfer = "^0.13.0"
six = "^1.16.0"
urllib3 = "^2.5.0"
webencodings = "^0.5.1"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.6"
redis = "^5.0.8"
requests = "^2.32.4"
flask-socketio = "^5.5.1"
virtualenv = "^20.31.2"
marshmallow-enum = "^1.5.1"
awscli = "^1.40.36"
typing-extensions = "^4.14.1"
aiohttp = "^3.12.14"
pytest = "^8.4.0"


[tool.poetry.group.dev.dependencies]
awscli = "^1.33.32"
bandit = "*"
black = "^25.1.0"
cyclonedx-python-lib = "^10.4.1"
cloudfoundry-client = "*"
exceptiongroup = "==1.3.0"
flake8 = "^7.3.0"
flake8-bugbear = "^24.12.12"
freezegun = "^1.5.3"
honcho = "*"
isort = "^6.0.1"
jinja2-cli = {version = "==0.8.2", extras = ["yaml"]}
moto = "==5.1.8"
pip-audit = "*"
pre-commit = "^4.2.0"
pytest = "^8.4.0"
pytest-env = "^1.1.3"
pytest-mock = "^3.14.1"
pytest-cov = "^6.2.1"
pytest-xdist = "^3.8.0"
radon = "^6.0.1"
requests-mock = "^1.11.0"
setuptools = "^80.9.0"
sqlalchemy-utils = "^0.41.2"
vulture = "^2.10"
detect-secrets = "^1.5.0"
poetry-dotenv-plugin = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
dotenv = "poetry_dotenv_plugin.plugin:PoetryDotenvPlugin"
